--- a/bd-advisory-routes.html
+++ b/bd-advisory-routes.html
@@ -94,27 +94,29 @@
 <div id="qd-advisory">
 
 
-<p id="qd-module-chooser"><a href="module-chooser/index.aspx?q=QD&amp;o=1" class="go">Choose your modules</a></p>
+<p id="qd-module-chooser"><a href="module-chooser/index.aspx?q=QD&amp;o=1" class="ou-btn">Choose your modules</a></p>
 
+<hr>
 
 <p>A key feature of studying for an Open degree is that you have full flexibility in choosing the subjects that make up your qualification.
 However, you may want to focus on one or two specific subjects throughout your studies, and we have developed suggested advisory routes to help you navigate through the
 curriculum and guide you through each of the levels within a particular subject.</p>
 
-<h3>Why have subject advisory routes for the Open degree been developed?</h3>
+<h2>Why have subject advisory routes for the Open degree been developed?</h2>
 
 <p>The benefit of using these suggested routes is that the modules have been chosen because they feed into each other and so provide the most sensible route
 through a particular subject. Having studied these advisory routes, we feel it will be easier to explain to potential employers which subjects you have
 specialised in. However please note that the subjects studied will not be reflected in your final qualification award title.</p>
 
-<h3>Is it compulsory to follow subject advisory routes to complete an Open degree?</h3>
+<h2>Is it compulsory to follow subject advisory routes to complete an Open degree?</h2>
 
 <p>No, these routes are not compulsory in any way, they merely bring together what we think are coherent combinations of modules that make sense if
 you want to focus on a couple of specific subjects as part of your Open qualification. You could also choose to focus on one specific subject
 for 180 credits and complete your remaining credits with a free choice of modules from across the rest of the curriculum.</p>
 
-<h3>Choose a subject below to view its advisory routes:</h3>
-<ul class="adv-route">
+<h2>Choose a subject below to view its advisory routes:</h2>
+
+<ul class="list-style2">
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=AHU">Arts and Humanities</a></li>
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=BMA">Business and Management</a></li>
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=CYS">Childhood, Youth and Education</a></li>
@@ -124,7 +126,6 @@ for 180 credits and complete your remaining credits with a free choice of module
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=MST">Maths and Statistics</a></li>
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=SCI">Science</a></li>
 <li><a href="qd-advisory-subject.aspx?o=1&amp;subj=SOC">Social Sciences</a></li>
-
 </ul>
 
 </div>
